Changed INT variable to "any" so that both... node and pod traffic can be captured.

--- a/tcpdump_daemonset/tcpdump_ds_aro.yaml
+++ b/tcpdump_daemonset/tcpdump_ds_aro.yaml
@@ -11,7 +11,7 @@ data:
   # Use OPR variable to change the filter operator.
   OPR: "or"
   # Use INT variable to specify interface name.
-  INT: "eth0"
+  INT: "any"
   # Use SIZ variable to change the dump file size in MegaBytes.
   SIZ: "500"
   # Use NUM variable to specify the maximum number of cap files.
