09/06/2025:     Added variable CUS to allow custom tcpdump queries, if this variable is set all other variables will be ignored. This allows for more complex queries to be used;     Increased pod memory limit to 1Gi, since pod was being OOM killend on the tcpdump installation fase.

--- a/tcpdump_daemonset/tcpdump_ds.yaml
+++ b/tcpdump_daemonset/tcpdump_ds.yaml
@@ -36,7 +36,7 @@
 #       b) Delete the PV: kubectl delete pv <PV_NAME>
 #    7) Browse the file share(PV) on your cluster managed Resource Group "MC_" using Azure Portal to download capture files.
 #
-# Latest Version: 1.1.4
+# Latest Version: 1.1.5
 #
 # CHANGELOG:
 #     11/08/2023:
@@ -57,6 +57,9 @@
 #         Added a storageClass with retain on reclaimPolicy to avoid patching PV manually. Thank you Ioan Corcodel for the idea from his work https://github.com/ioanc/k8s-network-troubleshooting/blob/master/daemonSet-tcpdump-pvc.yaml
 #         Added support to filter by HOST, if HST variable is set it will be used to filter the tcpdump with "host" option, SRC and DST variables will be ignored;
 #         Improved logic so that IFs aren't required to handle the INT variable per each tcpdump command. Default interface will be "any".
+#     09/06/2025:
+#         Added variable CUS to allow custom tcpdump queries, if this variable is set all other variables will be ignored. This allows for more complex queries to be used.
+#         Increased pod memory limit to 1Gi, since pod was being OOM killend on the tcpdump installation fase.
 #
 # TODO: Implement a "restricted" mode to only collect certain packages types. Other suggestions and/or feedback is welcomed.
 #
@@ -78,6 +81,8 @@ data:
   SIZ: ""
   # Use HST variable to filter the tcpdump with specific HOST. If this is set SRC and DST variables will be ignored.
   HST: ""
+  # Use CUS variable to filter the tcpdump with specific custom tcpdump query. If this is set all other variables will be ignored.
+  CUS: ""
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -154,7 +159,12 @@ spec:
             DST="net $DST"
             echo "DST is a Network"
           fi
-          if [ ! -z "$HST" ]; then
+          if [ ! -z "$CUS" ]; then
+            echo "HST variable is set..."
+            echo "Custom query: ${CUS}"
+            echo "WARNING: With CUS being set all other variables will be ignored!"
+            /usr/sbin/tcpdump -i ${INT} -n -s 0 -C ${SIZ} -W 15 -tttt ${CUS} -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          elif [ ! -z "$HST" ]; then
             echo "HST variable is set..."
             echo "HOST: ${HST}"
             echo "WARNING: With HST being set SRC and DST will be ignored!"
@@ -219,7 +229,7 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 400Mi
+            memory: 1Gi
           requests:
             cpu: 100m
             memory: 90Mi
